--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.1",
+    "@types/passport": "^1.0.12",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csv-parse": "^5.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-custom": "^1.1.1",
+    "passport-jwt": "^4.0.1",
     "prisma": "^5.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
